13/10/24 Removes Postgre from the code, was never used or really compiled for, maybe in the futre
13/10/22 Removed configure searches to embed perl in the code
13/10/17 Removed USE_RDB define from config, this was legacy Anope code for when rdb was an option.
13/05/31 Improved handling of KILL messages on InspIRCd
13/05/16 Do not free unallocated memory in InspIRCd protocol

Fixes
13/11/22 Compiling with clang on bsd systems.
13/11/20 Fixed compiler warnings created by fixing stuff for macosx, so now it will build nicely on
         slackware.
13/11/18 More Solaris/OpenIndian compiler warnings fixed
13/11/18 Fixed Compiler warning on OpenSuse where langcomp was not built with -O 
13/11/18 More MacOSX compiling issues taken care of.
13/11/17 Fixes compiler error when mysql backtrace is enabled, and the system doesn't have backtrace()
         also properly includes the header for backtrace()
13/11/17 Fixes compiler warning on DragonFly BSD
13/11/15 BSD systems fixes
13/11/13 Denora can compile on Solairs/OpenIndian 
13/11/13 Fixed crash bug with nefarious ircds
13/11/05 Fixed rdb_init() if MySQL not found it returns a better error message.
13/11/04 Fixed chan_delete() it cleared c->sqlname before we called the rest of the clean up, made it the
         last member of the channel struct to be cleaned out.
13/11/01 Cleaned up the "nefarious" hack in do_umode(), no longer leaks memory and ANSI standard
         coding.
13/10/31 change_user_realname() escaped the user->realname field then called on rdb_escape() again
         in the query, thus leaking memory.
13/10/31 sql_do_server_version() escaped the version reply but never used that when setting updating.
13/10/29 MySQL checks in configure process are hidden if you say no
13/10/29 Fixes some "make ansi" problems.. there are still issues building on a system that would
         force us into ansi.. but some of the unused variables are cleaned up.. networking under
         ansi is very hard..